# cargo-git-release

./: Cargo.toml
src/: lib.rs
