[package]
name = "cargo-git-release"
version = "0.0.1"
edition = "2024"

[[bin]]
name = "cargo-git-release"
path = "src/bin/cargo-git-release.rs"

[[bin]]
name = "git-release"
path = "src/bin/cargo-git-release.rs"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.48", features = ["derive"] }
regex = "1.11.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
toml = "0.9.7"
walkdir = "2.5.0"
