[package]
name = "cargo-git-release"
version = "0.1.0"
edition = "2024"
description = "A cargo subcommand to release crates to git"
license = "Apache-2.0"
repository = "https://github.com/thlstsul/cargo-git-release"

[[bin]]
name = "cargo-git-release"
path = "src/bin/cargo-git-release.rs"

[[bin]]
name = "git-release"
path = "src/bin/cargo-git-release.rs"

[dependencies]
anyhow = "1.0.100"
regex = "1.11.3"
serde_json = "1.0.145"
toml = "0.9.7"
walkdir = "2.5.0"

[dependencies.clap]
features = ["derive"]
version = "4.5.48"

[dependencies.serde]
features = ["derive"]
version = "1.0.228"
